// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label variations renders label while in create post modal 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="godStoryButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          Object {
            "height": 48,
          },
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={24}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={24}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      God Story
    </Text>
  </View>
</View>
`;

exports[`label variations renders label with no text 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="godStoryButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          null,
          Object {
            "width": 20,
          },
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
  </View>
</View>
`;

exports[`post types renders Announcement Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="announcementButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#505256",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      Announcement
    </Text>
  </View>
</View>
`;

exports[`post types renders Care Request Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="careRequestButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#FD726D",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      Care Request
    </Text>
  </View>
</View>
`;

exports[`post types renders God Story Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="godStoryButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      God Story
    </Text>
  </View>
</View>
`;

exports[`post types renders On Your Mind Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="onYourMindButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#B4B6BA",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      What's on Your Mind
    </Text>
  </View>
</View>
`;

exports[`post types renders Prayer Request Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="prayerRequestButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#A97398",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      Prayer Request
    </Text>
  </View>
</View>
`;

exports[`post types renders Spiritual Question Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="spiritualQuestionButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#FFA178",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      Spiritual Question
    </Text>
  </View>
</View>
`;

exports[`post types renders Step Of Faith Label 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="stepOfFaithButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#3CC8E6",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      Step of Faith
    </Text>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="godStoryButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "borderWidth": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        null,
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 36,
            "justifyContent": "space-between",
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#7076B5",
          },
          null,
          null,
        ],
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <SvgMock
      color="#ffffff"
      height={20}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
      width={20}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 20,
          },
        ]
      }
    >
      God Story
    </Text>
  </View>
</View>
`;
